rename variables and document

--- a/sales_report/view/output/output.html
+++ b/sales_report/view/output/output.html
@@ -17,7 +17,7 @@
 
             <table id="phy_table">
                 <tr>
-                    <th colspan='10'><h2>Figures 2008-02</h2></th>
+                    <th colspan='10'><h2>Figures 2008-05</h2></th>
                 </tr>
                 <tr>
                 
@@ -28,9 +28,9 @@
                 </tr> 
                 <tr>
                 
-                    <td><img src=/tmp/axa_test_SM_NAd/OrderTurnOver.png alt="sales view"></td>
+                    <td><img src=/home/vagrant/Desktop/sales_report/sales_report/view/output/OrderTurnOver.png alt="sales view"></td>
                 
-                    <td><img src=/tmp/axa_test_SM_NAd/OrderProfit.png alt="sales view"></td>
+                    <td><img src=/home/vagrant/Desktop/sales_report/sales_report/view/output/OrderProfit.png alt="sales view"></td>
                 
                 </tr>
 
@@ -42,112 +42,112 @@
 
             <table id="phy_table">
                 <tr>
-                    <th colspan='10'><h2>Tables 2008-02</h2></th>
+                    <th colspan='10'><h2>Tables 2008-05</h2></th>
                 </tr>
                 
                     <th colspan="2" >OrderTurnOver</th>
                     
                         <tr>
-                            <td>Amy Alberts</td>
-                            <td>2574.95</td>
-                        </tr>
-                    
-                        <tr>
                             <td>David Campbell</td>
-                            <td>139407.66</td>
+                            <td>188786.54</td>
                         </tr>
                     
                         <tr>
                             <td>Jillian Carson</td>
-                            <td>279324.38</td>
+                            <td>357804.41</td>
                         </tr>
                     
                         <tr>
                             <td>Linda Mitchell</td>
-                            <td>838825.96</td>
+                            <td>907212.61</td>
                         </tr>
                     
                         <tr>
                             <td>Michael Blythe</td>
-                            <td>530909.31</td>
+                            <td>420074.35</td>
                         </tr>
                     
                         <tr>
                             <td>Pamela Ansman-Wolfe</td>
-                            <td>54778.86</td>
+                            <td>95230.32</td>
                         </tr>
                     
                         <tr>
                             <td>Ranjit Varkey Chudukatil</td>
-                            <td>698506.73</td>
+                            <td>918902.73</td>
                         </tr>
                     
                         <tr>
                             <td>Shu Ito</td>
-                            <td>143123.14</td>
+                            <td>169381.5</td>
+                        </tr>
+                    
+                        <tr>
+                            <td>Stephen Jiang</td>
+                            <td>166443.18</td>
                         </tr>
                     
                         <tr>
                             <td>Tete Mensa-Annan</td>
-                            <td>271261.45</td>
+                            <td>341966.01</td>
                         </tr>
                     
                         <tr>
                             <td>Tsvi Reiter</td>
-                            <td>314238.15</td>
+                            <td>441756.8</td>
                         </tr>
                     
                 
                     <th colspan="2" >OrderProfit</th>
                     
                         <tr>
-                            <td>Amy Alberts</td>
-                            <td>1218.2635</td>
-                        </tr>
-                    
-                        <tr>
                             <td>David Campbell</td>
-                            <td>60562.5654</td>
+                            <td>52496.173</td>
                         </tr>
                     
                         <tr>
                             <td>Jillian Carson</td>
-                            <td>111049.7991</td>
+                            <td>94691.65875</td>
                         </tr>
                     
                         <tr>
                             <td>Linda Mitchell</td>
-                            <td>358245.5303</td>
+                            <td>258791.9965</td>
                         </tr>
                     
                         <tr>
                             <td>Michael Blythe</td>
-                            <td>215399.94</td>
+                            <td>111663.389875</td>
                         </tr>
                     
                         <tr>
                             <td>Pamela Ansman-Wolfe</td>
-                            <td>21209.2497</td>
+                            <td>22709.0295</td>
                         </tr>
                     
                         <tr>
                             <td>Ranjit Varkey Chudukatil</td>
-                            <td>279739.3829</td>
+                            <td>238681.457</td>
                         </tr>
                     
                         <tr>
                             <td>Shu Ito</td>
-                            <td>54690.7316</td>
+                            <td>39156.6145</td>
+                        </tr>
+                    
+                        <tr>
+                            <td>Stephen Jiang</td>
+                            <td>42631.48175</td>
                         </tr>
                     
                         <tr>
                             <td>Tete Mensa-Annan</td>
-                            <td>102105.316</td>
+                            <td>75886.145</td>
                         </tr>
                     
                         <tr>
                             <td>Tsvi Reiter</td>
-                            <td>128107.6322</td>
+                            <td>115479.77475</td>
                         </tr>
                     
                 
