--- a/sales_report/view/sales_report.html
+++ b/sales_report/view/sales_report.html
@@ -11,6 +11,11 @@
         <div class="header center-contents">
             <h1>AXA SALES REPORT <br></h1>
         </div>
+            <div class = "non_tabular">
+        <span><strong>number of sales </strong> 65</span>
+        <span><strong>total turn over </strong>1 200 000</span>
+        <span><strong>total profit </strong>500 000</span>
+        </div>
 
         <div id="tables" class="center-contents">
 
